tests/NormalTests/paczka1/small_fuzzy/82412526.err
Error in line 1: Pv4z A794 56,4
Error in line 3: Pv4z S636 25,7
